added the html structure

--- a/index.html
+++ b/index.html
@@ -12,5 +12,52 @@
 </head>
 <body>
     
+    <div id = "container">
+
+        <div id = "control-panel">
+            <form action="">
+                <label id = "player-name-label">player <span>one</span> name</label>
+                <div id = "submit-container">
+                    <input type = "button" value = "submit" id = "submit"/>
+                </div>
+            </form>
+            <input type = "button" value = "Play AI" id = "change-opponent"/>
+            <div id = "socials-container">
+                <h4>Challenge Me</h4>
+                <div id = "socials-image-container">
+                    <a href = "https://github.com/mogoatlhe">
+                        <img src = "images/social-media-icons/github-logo.png" alt = "github logo"/>
+                    </a>
+                    <a href = "https://www.linkedin.com/in/moeketsi-mogoatlhe-6b7807194">
+                        <img src = "images/social-media-icons/linkedIn-logo.png" alt = "linkedin logo"/>
+                    </a>
+                    <a href = "https://www.youtube.com/watch?v=hr7Yww-3Y7E">
+                        <img src = "images/social-media-icons/twitter-logo.png" alt = "twitter logo"/>
+                    </a>
+                    <a href = "https://www.youtube.com/watch?v=hr7Yww-3Y7E">
+                        <img src = "images/social-media-icons/youtube-logo.png" alt = "youtube logo"/>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div id = "game-board-container">
+            <div id = "game-board">
+                <div class = "squares" data-position = "0"></div>
+                <div class = "squares" data-position = "1"></div>
+                <div class = "squares" data-position = "2"></div>
+                <div class = "squares" data-position = "3"></div>
+                <div class = "squares" data-position = "4"></div>
+                <div class = "squares" data-position = "5"></div>
+                <div class = "squares" data-position = "6"></div>
+                <div class = "squares" data-position = "7"></div>
+                <div class = "squares" data-position = "8"></div>
+            </div>
+        </div>
+        <div id = "results-feedback-container">
+            <div id = "results-feedback"></div>
+        </div>
+
+    </div>
+
 </body>
 </html>
