--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
+    <link rel = "stylesheet" href = "./style/style.css">
 </head>
 <body>
     
@@ -42,15 +43,15 @@
         </div>
         <div id = "game-board-container">
             <div id = "game-board">
-                <div class = "squares" data-position = "0"></div>
-                <div class = "squares" data-position = "1"></div>
-                <div class = "squares" data-position = "2"></div>
-                <div class = "squares" data-position = "3"></div>
-                <div class = "squares" data-position = "4"></div>
-                <div class = "squares" data-position = "5"></div>
-                <div class = "squares" data-position = "6"></div>
-                <div class = "squares" data-position = "7"></div>
-                <div class = "squares" data-position = "8"></div>
+                <div class = "square" data-position = "0"></div>
+                <div class = "square" data-position = "1"></div>
+                <div class = "square" data-position = "2"></div>
+                <div class = "square" data-position = "3"></div>
+                <div class = "square" data-position = "4"></div>
+                <div class = "square" data-position = "5"></div>
+                <div class = "square" data-position = "6"></div>
+                <div class = "square" data-position = "7"></div>
+                <div class = "square" data-position = "8"></div>
             </div>
         </div>
         <div id = "results-feedback-container">
