finish the page style layout

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <div id = "container">
 
         <div id = "control-panel">
-            <form action="">
+            <form>
                 <label id = "player-name-label">player <span>one</span> name</label>
+                <input type = "text" value = "player one" id = "player-name"/>
                 <div id = "submit-container">
                     <input type = "button" value = "submit" id = "submit"/>
                 </div>
