implemented function to check all winning possibilities

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div id = "results-feedback-container">
-            <div id = "results-feedback"></div>
+            <p id = "results-feedback"></p>
         </div>
 
     </div>
