--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
         <div id = "control-panel">
             <form>
-                <label id = "player-name-label">player <span>one</span> name</label>
+                <label id = "player-name-label">Player <span>one</span> name</label>
                 <input type = "text" value = "player one" id = "player-name"/>
                 <div id = "submit-container">
-                    <input type = "button" value = "submit" id = "submit"/>
+                    <input type = "button" value = "Submit" id = "submit"/>
                 </div>
             </form>
-            <input type = "button" value = "Play AI" id = "change-opponent"/>
+            <input type = "button" value = "Restart" id = "restart"/>
             <div id = "socials-container">
                 <h4>Challenge Me</h4>
                 <div id = "socials-image-container">
