cleaned up code.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
 
         <div id = "control-panel">
             <form>
-                <label id = "player-name-label">Player <span>one</span> name</label>
-                <input type = "text" value = "player one" id = "player-name"/>
+                <div id = "player-one-container">
+                    <label id = "player-one-label">Player <span>one</span> name</label>
+                    <input type = "text" id = "player-one-name"/>
+                </div>
+                <div id = "player-two-container">
+                    <label id = "player-two-label">Player <span>two</span> name</label>
+                    <input type = "text" id = "player-two-name"/>
+                </div>
                 <div id = "submit-container">
                     <input type = "button" value = "Submit" id = "submit"/>
                 </div>
